<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cristi.viajes.MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="337dp"
        android:layout_height="461dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <GridLayout
            android:id="@+id/glEstructuraGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <GridLayout
                android:id="@+id/glTransporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:columnCount="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvTransporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvTransporte" />

                <RadioGroup
                    android:id="@+id/rgTransporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp">

                    <RadioButton
                        android:id="@+id/rbAutobus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbAutobus" />

                    <RadioButton
                        android:id="@+id/rbAvion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbAvion" />

                    <RadioButton
                        android:id="@+id/rbTren"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbTren" />

                    <RadioButton
                        android:id="@+id/rbPropio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbPropio" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvPersonasTransporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPersonas" />

                <EditText
                    android:id="@+id/etPersonasTransporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etPersonasHint"
                    android:inputType="textPersonName"
                    android:text="@string/etPersonas" />

            </GridLayout>

            <GridLayout
                android:id="@+id/glHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:columnCount="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/tvHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvHotel" />

                <RadioGroup
                    android:id="@+id/rgHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp">

                    <RadioButton
                        android:id="@+id/rbHilton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbHilton" />

                    <RadioButton
                        android:id="@+id/rbIbis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbIbis" />

                    <RadioButton
                        android:id="@+id/rbMalaga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbMalaga" />

                </RadioGroup>

                <TextView
                    android:id="@+id/tvPersonasHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvPersonas" />

                <EditText
                    android:id="@+id/etPersonasHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/etPersonasHint"
                    android:inputType="textPersonName"
                    android:text="@string/etPersonas" />
            </GridLayout>

            <GridLayout
                android:id="@+id/glComida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:columnCount="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/tvComida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvComida" />

                <RadioGroup
                    android:id="@+id/rgComida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp">

                    <RadioButton
                        android:id="@+id/rbCompleta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbCompleta" />

                    <RadioButton
                        android:id="@+id/rbMedia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbMedia" />

                    <RadioButton
                        android:id="@+id/rbDesayuno"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbDesayuno" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvPersonasComida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvPersonas" />

                <EditText
                    android:id="@+id/etPersonasComida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etPersonasHint"
                    android:inputType="textPersonName"
                    android:text="@string/etPersonas" />

            </GridLayout>

            <GridLayout
                android:id="@+id/glOcio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:columnCount="1"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:id="@+id/tvOcio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tvOcio" />

                <RadioGroup
                    android:id="@+id/rgOcio"
                    android:layout_width="286dp"
                    android:layout_height="129dp"
                    tools:layout_editor_absoluteX="76dp"
                    tools:layout_editor_absoluteY="83dp">

                    <RadioButton
                        android:id="@+id/rbCultural"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbCultural" />

                    <RadioButton
                        android:id="@+id/rbFiestas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbFiestas" />

                    <RadioButton
                        android:id="@+id/rbLibro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rbLibro" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvPersonasOcio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPersonas" />

                <EditText
                    android:id="@+id/etPersonasOcio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/etPersonasHint"
                    android:inputType="textPersonName"
                    android:text="@string/etPersonas" />
            </GridLayout>

        </GridLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/tvPrecio"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/tvMostrarPrecio"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginRight="247dp"
        app:layout_constraintTop_toBottomOf="@+id/scroll"
        android:text="@string/tvMostrarPrecio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/tvPrecio"
        android:layout_marginLeft="24dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/bNuevaActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bNuevaActividad"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="467dp" />

</android.support.constraint.ConstraintLayout>
